--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "elasticsearch/elasticsearch",
-  "description": "PHP Client for Elasticsearch",
+  "name": "log-borica/elasticsearch",
+  "description": "FORK PHP Client for Elasticsearch",
   "keywords": ["search","client", "elasticsearch"],
   "type": "library",
   "license": "Apache-2.0",
